# dci-mcp-server

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Containerfile  Containerfile.sse  GOOGLE_DRIVE_SETUP.md  JIRA_SETUP.md  NEWS.md  PROMPTS.md  README.md  SECURITY.md  drive_test.py  env.example  jira_test.py  main.py  my_report.md  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: ci.yml
ES_mapping/: mapping.json
examples/: aggregation_examples.py  aggregation_patterns.md  aggregation_usage_examples.py  optimized_queries.md
mcp_server/: __init__.py  config.py  main.py
mcp_server/models/: __init__.py  types.py
mcp_server/prompts/: __init__.py  __main__.py  prompts.py  render.py
mcp_server/resources/: __init__.py  es_mapping.py
mcp_server/services/: __init__.py  dci_base_service.py  dci_component_service.py  dci_file_service.py  dci_job_service.py  dci_log_service.py  dci_pipeline_service.py  dci_product_service.py  dci_remoteci_service.py  dci_service.py  dci_team_service.py  dci_topic_service.py  github_service.py  gitlab_service.py  google_drive_service.py  jira_service.py  pr_finder.py  support_case_service.py
mcp_server/tools/: __init__.py  component_tools.py  date_tools.py  diagnostic_tools.py  file_tools.py  github_tools.py  gitlab_tools.py  google_drive_tools.py  jira_introspect_tools.py  jira_tools.py  jira_write_tools.py  job_tools.py  log_tools.py  pipeline_tools.py  pr_tools.py  product_tools.py  remoteci_tools.py  support_case_tools.py  team_tools.py  topic_tools.py
mcp_server/utils/: __init__.py  http_client.py  pagination.py  pr_parser.py  quarterly_analysis.py
scripts/: run-checks.sh
tests/: __init__.py  integration_test.py  test_aggregations_nested.py  test_aggregations_simple.py  test_aggregations_triple_nested.py  test_basic.py  test_evals.py  test_github_tools.py  test_gitlab_tools.py  test_jira_introspect_tools.py  test_jira_tools.py  test_nodes_hardware.py  test_pagination.py  test_prompts.py  test_quarterly_analysis.py  test_query_patterns.py  test_rca_eval.py  test_rca_prompt_integration.py  test_real_world_use_cases.py  test_support_case_tools.py  unit_test.py
