[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dci-mcp-server"
version = "0.1.0"
description = "DCI MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "dciclient",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pre-commit>=4.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.5",
    "bandit>=1.7.8",
    "detect-secrets>=1.4.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["mcp_server/", "main.py"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["mcp_server", "tests", "main.py"]



# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':'
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "env", "site-packages"]
skips = ["B101", "B601", "B104", "B404", "B603", "B311", "B310", "B323", "B110"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "types-python-dateutil>=2.9.0.20250708",
]
